tests/errors/max_recursion.ki
var f = Function(n):
    return f(n + 1)
discard f(0)
